[project]
name = "framepack"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "accelerate==1.6.0",
    "diffusers==0.33.1",
    "transformers==4.46.2",
    "gradio==5.23.0",
    "sentencepiece==0.2.0",
    "pillow==11.1.0",
    "av==12.1.0",
    "numpy==1.26.2",
    "scipy==1.12.0",
    "requests==2.31.0",
    "torchsde==0.2.6",
    "einops",
    "opencv-contrib-python",
    "safetensors",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu126" }]
torchvision = [{ index = "pytorch-cu126" }]
torchaudio = [{ index = "pytorch-cu126" }]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
